# llama-desktop

./: .gitignore  COPYING  Cargo.toml  README.md  TODO  build.rs
src/: debug.rs  fonts.rs  helpers.rs  logics.rs  main.rs  ollama.rs  protocol.rs  ui.rs
src/logics/: mod.rs  sender.rs  state.rs  storage.rs  timeouts.rs  version.rs
src/ui/: app_impl.rs  frame_impl.rs  llama_app.rs  mod.rs
ui/: appwindow.slint
