[package]
name        = "llama-desktop"
version     = "2.2.4"
authors     = ["Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://crates.io/crates/llama-desktop"
repository  = "https://github.com/cacilhas/llama-desktop"
keywords    = ["desktop", "ai"]
description = "Desktop interface for Ollama"
edition     = "2021"

[profile.release]
opt-level = "s"
debug = false
rpath = false
strip = true

[dependencies]
serde_json = "1.0"
static_init = "1.0"
toml = "0.8"
url = "2.5"

[dependencies.eframe]
version= "0.27"
features = ["persistence"]

[dependencies.egui_commonmark]
version = "0.16"
features = ["better_syntax_highlighting"]

[dependencies.image]
version = "0.25"
features = ["png"]

[dependencies.egui_extras]
version = "0.27"
features = ["image"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.38"
features = ["full"]
