[package]
name = "llama-desktop"
version = "2.3.0"
authors = ["Montegasppα Cacilhας <montegasppa@cacilhas.info>"]
license = "MIT"
readme = "README.md"
homepage = "https://crates.io/crates/llama-desktop"
repository = "https://github.com/cacilhas/llama-desktop"
keywords = ["desktop", "ai"]
description = "Desktop interface for Ollama"
edition = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
debug = false
rpath = false
strip = true

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
comrak = "0.29"
eyre = "0.6"
rfd = "0.15"
serde_json = "1.0"
static_init = "1.0"
url = "2.5"

[dependencies.eframe]
version = "0.29.0"
features = ["persistence"]

[dependencies.egui_commonmark]
version = "0.18"
features = ["better_syntax_highlighting"]

[dependencies.image]
version = "0.25"
features = ["png"]

[dependencies.egui_extras]
version = "0.29.0"
features = ["image"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.41"
features = ["full"]

[build-dependencies]
serde_json = "1.0"
toml = "0.8"
